common/deploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    image.openshift.io/triggers: >-
      [{"from":{"kind":"ImageStreamTag","name":"fhaa-app:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"fhaa-app\")].image"}]
    openshift.io/generated-by: OpenShiftNewApp
  name: fhaa-app
  namespace: fhaa
  labels:
    app: fhaa-app
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: fhaa-app
  template:
    metadata:
      labels:
        deployment: fhaa-app
    spec:
      containers:
        - name: fhaa-app
          image: >-
            image-registry.openshift-image-registry.svc:5000/fhaa/fhaa-app
          ports:
            - containerPort: 8000
              protocol: TCP
          resources:
            limits:
              cpu: '200m'
              memory: '1Gi'
        - name: loadtest
          image: >-
            image-registry.openshift-image-registry.svc:5000/openshift/load-test
            namespace: openshift
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: '800m'
              memory: '2Gi'
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
