common/load_svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    app: fhaa-app
  name: fhaa-svc-loadtest
namespace: fhaa
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    deployment: fhaa-app
